# PrintScout

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/: FUNDING.yml
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_collections.py  0003_likes.py
backend/app/: main.py  models.py  translation.py
backend/app/api/: _likes_helpers.py  auth.py  collections.py  fit.py  likes.py  model.py  popular.py  routes.py  schemas.py  search.py
backend/app/bot/: bot.py  handlers.py
backend/app/core/: cache.py  db.py  settings.py
backend/app/matcher/: dimensions.py  fit.py  parse.py
backend/app/sources/: base.py  printables.py  registry.py  thingiverse.py
webapp/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
webapp/src/: App.tsx  index.css  main.tsx
webapp/src/components/: AddToCollectionSheet.tsx  ModelCard.tsx  PrinterCard.tsx
webapp/src/components/ui/: button.tsx
webapp/src/lib/: api.ts  backNav.ts  likes.ts  recentSearches.ts  tg.ts
webapp/src/pages/: CollectionDetail.tsx  Collections.tsx  Home.tsx  Likes.tsx  ModelDetail.tsx  Onboarding.tsx  PrinterNew.tsx  Printers.tsx  Search.tsx
